tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HandleLogisticsw-mZBBLGPDQQGDVfcT_wh9AQ==__MoreItemSinksinN-HA1vu57XQG-Na7rAPEFSDA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 11445687824481866252,
  "optional_prerequisites": [
    1932972328434001402,
    2576985233236771601
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "There are more kinds of ItemSink modules in NEI. Feel free to look through them to find the ItemSink module that suits your needs.\n\nHow they sort items and assign inventory spaces are mostly explained by their item names.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "More ItemSinks in NEI",
    "party_single_reward": null,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
