tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HandleLogisticsw-mZBBLGPDQQGDVfcT_wh9AQ==__Remoterequests-MwRByyNxQt-LfGgUqm8QDQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2553895992100327437,
  "prerequisites": [
    1477,
    1478,
    15642768008152791499
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Remote requests aren't always convenient. As long as you are in range with a request pipe, the remote orderer can take the order and send it to a request pipe the orderer binds to.\n\nPretty handy if you have an ender chest and an ender pouch...\n\n[note]Author's note: Too bad ender chests and pouches are gated behind IV and thaumcraft... And why people would use an LP system at that point is really beyond me...[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Remote requests",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1477,
    1478,
    15642768008152791499
  ],
  "rewards": [],
  "tasks": []
}
