tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HandleLogisticsw-mZBBLGPDQQGDVfcT_wh9AQ==__RequestinaRecipe-FYOm8b1PRTKsyVjFdpBqjg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 13641197879368379022,
  "prerequisites": [
    15642768008152791499
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Most of the time you are requesting things because you need to craft something. So here is the Logistics Request Table.\n\nThis thing comes with a 3*3 crafting grid that you can load with a NEI recipe and request the recipe. There is also an inventory buffer that you can use to store items within.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Requestin' a Recipe",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    15642768008152791499
  ],
  "rewards": [],
  "tasks": []
}
