tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HandleLogisticsw-mZBBLGPDQQGDVfcT_wh9AQ==__SatellitesWaitTh-y2mOWnXvRe2xWrdvVS297w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 8498087907510042095,
  "prerequisites": [
    13312997664185165326
  ],
  "properties": {
    "auto_claim": false,
    "desc": "A buffer of 64 per slot is never big enough. Just look at red alloy ingot for example. It can only hold 16 recipes worth of redstone at once. You don't really want the items to just zoom around the pipes while waiting for the machine to make room... You want to have a big chest buffering items to be processed.\n\nIntroducing the Satellite Logistics Pipes. It provides additional input into the recipe incorporating it.\n\nThe pipe runs on a numerical frequency system, with the whole server sharing the number pool. This ensures that 2 separate systems can be connected to each other without conflict.\n\nYou can \"connect\" a crafting module with one satellite pipe by selecting the correct frequency of the satellite part. Multiple modules can connect to a single satellite pipe.\n\nSatellite pipe inputs are the 3 gray slots on the right of the 9 slots of the module. Only items in the 3 gray slots will be sent to satellite pipes.\n\n§cNote: Ensure your satellite pipe has any frequency other than 0. A satellite pipe with frequency 0 will not work.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Satellites! Wait,... They don't Orbit...",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    13312997664185165326
  ],
  "rewards": [],
  "tasks": []
}
