tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HandleLogisticsw-mZBBLGPDQQGDVfcT_wh9AQ==__SortingIncoming-FkDubMYaQ5GKGvvfHZ73yw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 14274796259450484683,
  "prerequisites": [
    11445687824481866252
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now that storage spaces are organized and assigned, time to let the network sort the items for us.\n\nThere are 2 ways to insert items into the system\n\n1. Use an extraction module to extract items into the system. It is slow, but everything that has a valid destination will be sent into the network.\n\n2. Use a QuickSort module. It extracts a whole stack of items that has a valid destination. This module will ignore items that have no destinations other than the default route though...\n\nIt is your choice. Pick what you like.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Sorting Incoming",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    11445687824481866252
  ],
  "rewards": [],
  "tasks": []
}
